MOCP/MOCPParser.py
# Generated from MOCP.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MOCPParser ( Parser ):

    grammarFileName = "MOCP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'inteiro'", "'real'", "'vazio'", "'principal'", 
                     "'se'", "'senao'", "'enquanto'", "'para'", "'retornar'", 
                     "'ler'", "'lerc'", "'lers'", "'escrever'", "'escreverc'", 
                     "'escreverv'", "'escrevers'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'='", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'&&'", "'||'", "'!'", "';'", "','", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "INTEIRO", "REAL", "VAZIO", "PRINCIPAL", 
                      "SE", "SENAO", "ENQUANTO", "PARA", "RETORNAR", "LER", 
                      "LERC", "LERS", "ESCREVER", "ESCREVERC", "ESCREVERV", 
                      "ESCREVERS", "PLUS", "MINUS", "STAR", "DIV", "MOD", 
                      "ASSIGN", "EQUAL", "NOTEQUAL", "LESS", "GREATER", 
                      "LESSEQ", "GREATEREQ", "AND", "OR", "NOT", "PONTOVIRG", 
                      "VIRG", "LPAREN", "RPAREN", "LCHAVE", "RCHAVE", "LBRACK", 
                      "RBRACK", "REAL_LITERAL", "INT_LITERAL", "STRING_LITERAL", 
                      "IDENTIFICADOR", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "WS", "TEXTO_LITERAL" ]

    RULE_programa = 0
    RULE_prototipo = 1
    RULE_funcao = 2
    RULE_nomeFuncao = 3
    RULE_listaParametros = 4
    RULE_parametro = 5
    RULE_tipo = 6
    RULE_declaracao = 7
    RULE_listaVariaveis = 8
    RULE_variavel = 9
    RULE_blocoArray = 10
    RULE_listaValores = 11
    RULE_bloco = 12
    RULE_instrucoes = 13
    RULE_atribuicao = 14
    RULE_instrucaoSe = 15
    RULE_instrucaoEnquanto = 16
    RULE_instrucaoPara = 17
    RULE_expressaoOuAtribuicao = 18
    RULE_instrucaoRetorno = 19
    RULE_instrucaoEscrita = 20
    RULE_argumento_texto = 21
    RULE_chamadaFuncao = 22
    RULE_chamadaLeitura = 23
    RULE_argumentos = 24
    RULE_expressao = 25
    RULE_expressao_logica_e = 26
    RULE_expressao_comparacao = 27
    RULE_expressao_aditiva = 28
    RULE_expressao_multiplicativa = 29
    RULE_expressao_unaria = 30
    RULE_expressao_primaria = 31
    RULE_opRel = 32

    ruleNames =  [ "programa", "prototipo", "funcao", "nomeFuncao", "listaParametros", 
                   "parametro", "tipo", "declaracao", "listaVariaveis", 
                   "variavel", "blocoArray", "listaValores", "bloco", "instrucoes", 
                   "atribuicao", "instrucaoSe", "instrucaoEnquanto", "instrucaoPara", 
                   "expressaoOuAtribuicao", "instrucaoRetorno", "instrucaoEscrita", 
                   "argumento_texto", "chamadaFuncao", "chamadaLeitura", 
                   "argumentos", "expressao", "expressao_logica_e", "expressao_comparacao", 
                   "expressao_aditiva", "expressao_multiplicativa", "expressao_unaria", 
                   "expressao_primaria", "opRel" ]

    EOF = Token.EOF
    INTEIRO=1
    REAL=2
    VAZIO=3
    PRINCIPAL=4
    SE=5
    SENAO=6
    ENQUANTO=7
    PARA=8
    RETORNAR=9
    LER=10
    LERC=11
    LERS=12
    ESCREVER=13
    ESCREVERC=14
    ESCREVERV=15
    ESCREVERS=16
    PLUS=17
    MINUS=18
    STAR=19
    DIV=20
    MOD=21
    ASSIGN=22
    EQUAL=23
    NOTEQUAL=24
    LESS=25
    GREATER=26
    LESSEQ=27
    GREATEREQ=28
    AND=29
    OR=30
    NOT=31
    PONTOVIRG=32
    VIRG=33
    LPAREN=34
    RPAREN=35
    LCHAVE=36
    RCHAVE=37
    LBRACK=38
    RBRACK=39
    REAL_LITERAL=40
    INT_LITERAL=41
    STRING_LITERAL=42
    IDENTIFICADOR=43
    LINE_COMMENT=44
    BLOCK_COMMENT=45
    WS=46
    TEXTO_LITERAL=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MOCPParser.EOF, 0)

        def prototipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCPParser.PrototipoContext)
            else:
                return self.getTypedRuleContext(MOCPParser.PrototipoContext,i)


        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCPParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(MOCPParser.DeclaracaoContext,i)


        def funcao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCPParser.FuncaoContext)
            else:
                return self.getTypedRuleContext(MOCPParser.FuncaoContext,i)


        def getRuleIndex(self):
            return MOCPParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = MOCPParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0):
                self.state = 69
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 66
                    self.prototipo()
                    pass

                elif la_ == 2:
                    self.state = 67
                    self.declaracao()
                    pass

                elif la_ == 3:
                    self.state = 68
                    self.funcao()
                    pass


                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(MOCPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrototipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(MOCPParser.TipoContext,0)


        def nomeFuncao(self):
            return self.getTypedRuleContext(MOCPParser.NomeFuncaoContext,0)


        def LPAREN(self):
            return self.getToken(MOCPParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MOCPParser.RPAREN, 0)

        def PONTOVIRG(self):
            return self.getToken(MOCPParser.PONTOVIRG, 0)

        def listaParametros(self):
            return self.getTypedRuleContext(MOCPParser.ListaParametrosContext,0)


        def getRuleIndex(self):
            return MOCPParser.RULE_prototipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrototipo" ):
                listener.enterPrototipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrototipo" ):
                listener.exitPrototipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrototipo" ):
                return visitor.visitPrototipo(self)
            else:
                return visitor.visitChildren(self)




    def prototipo(self):

        localctx = MOCPParser.PrototipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prototipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.tipo()
            self.state = 77
            self.nomeFuncao()
            self.state = 78
            self.match(MOCPParser.LPAREN)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0):
                self.state = 79
                self.listaParametros()


            self.state = 82
            self.match(MOCPParser.RPAREN)
            self.state = 83
            self.match(MOCPParser.PONTOVIRG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(MOCPParser.TipoContext,0)


        def nomeFuncao(self):
            return self.getTypedRuleContext(MOCPParser.NomeFuncaoContext,0)


        def LPAREN(self):
            return self.getToken(MOCPParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MOCPParser.RPAREN, 0)

        def bloco(self):
            return self.getTypedRuleContext(MOCPParser.BlocoContext,0)


        def listaParametros(self):
            return self.getTypedRuleContext(MOCPParser.ListaParametrosContext,0)


        def getRuleIndex(self):
            return MOCPParser.RULE_funcao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncao" ):
                listener.enterFuncao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncao" ):
                listener.exitFuncao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncao" ):
                return visitor.visitFuncao(self)
            else:
                return visitor.visitChildren(self)




    def funcao(self):

        localctx = MOCPParser.FuncaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.tipo()
            self.state = 86
            self.nomeFuncao()
            self.state = 87
            self.match(MOCPParser.LPAREN)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0):
                self.state = 88
                self.listaParametros()


            self.state = 91
            self.match(MOCPParser.RPAREN)
            self.state = 92
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NomeFuncaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(MOCPParser.IDENTIFICADOR, 0)

        def PRINCIPAL(self):
            return self.getToken(MOCPParser.PRINCIPAL, 0)

        def getRuleIndex(self):
            return MOCPParser.RULE_nomeFuncao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNomeFuncao" ):
                listener.enterNomeFuncao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNomeFuncao" ):
                listener.exitNomeFuncao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNomeFuncao" ):
                return visitor.visitNomeFuncao(self)
            else:
                return visitor.visitChildren(self)




    def nomeFuncao(self):

        localctx = MOCPParser.NomeFuncaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nomeFuncao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not(_la==4 or _la==43):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAZIO(self):
            return self.getToken(MOCPParser.VAZIO, 0)

        def parametro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCPParser.ParametroContext)
            else:
                return self.getTypedRuleContext(MOCPParser.ParametroContext,i)


        def VIRG(self, i:int=None):
            if i is None:
                return self.getTokens(MOCPParser.VIRG)
            else:
                return self.getToken(MOCPParser.VIRG, i)

        def getRuleIndex(self):
            return MOCPParser.RULE_listaParametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaParametros" ):
                listener.enterListaParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaParametros" ):
                listener.exitListaParametros(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaParametros" ):
                return visitor.visitListaParametros(self)
            else:
                return visitor.visitChildren(self)




    def listaParametros(self):

        localctx = MOCPParser.ListaParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listaParametros)
        self._la = 0 # Token type
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(MOCPParser.VAZIO)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.parametro()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==33:
                    self.state = 98
                    self.match(MOCPParser.VIRG)
                    self.state = 99
                    self.parametro()
                    self.state = 104
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(MOCPParser.TipoContext,0)


        def IDENTIFICADOR(self):
            return self.getToken(MOCPParser.IDENTIFICADOR, 0)

        def LBRACK(self):
            return self.getToken(MOCPParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(MOCPParser.RBRACK, 0)

        def getRuleIndex(self):
            return MOCPParser.RULE_parametro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametro" ):
                listener.enterParametro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametro" ):
                listener.exitParametro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametro" ):
                return visitor.visitParametro(self)
            else:
                return visitor.visitChildren(self)




    def parametro(self):

        localctx = MOCPParser.ParametroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parametro)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.tipo()
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==43:
                self.state = 108
                self.match(MOCPParser.IDENTIFICADOR)


            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==38:
                self.state = 111
                self.match(MOCPParser.LBRACK)
                self.state = 112
                self.match(MOCPParser.RBRACK)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEIRO(self):
            return self.getToken(MOCPParser.INTEIRO, 0)

        def REAL(self):
            return self.getToken(MOCPParser.REAL, 0)

        def VAZIO(self):
            return self.getToken(MOCPParser.VAZIO, 0)

        def getRuleIndex(self):
            return MOCPParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = MOCPParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(MOCPParser.TipoContext,0)


        def listaVariaveis(self):
            return self.getTypedRuleContext(MOCPParser.ListaVariaveisContext,0)


        def PONTOVIRG(self):
            return self.getToken(MOCPParser.PONTOVIRG, 0)

        def getRuleIndex(self):
            return MOCPParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao" ):
                return visitor.visitDeclaracao(self)
            else:
                return visitor.visitChildren(self)




    def declaracao(self):

        localctx = MOCPParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declaracao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.tipo()
            self.state = 118
            self.listaVariaveis()
            self.state = 119
            self.match(MOCPParser.PONTOVIRG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaVariaveisContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variavel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCPParser.VariavelContext)
            else:
                return self.getTypedRuleContext(MOCPParser.VariavelContext,i)


        def VIRG(self, i:int=None):
            if i is None:
                return self.getTokens(MOCPParser.VIRG)
            else:
                return self.getToken(MOCPParser.VIRG, i)

        def getRuleIndex(self):
            return MOCPParser.RULE_listaVariaveis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaVariaveis" ):
                listener.enterListaVariaveis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaVariaveis" ):
                listener.exitListaVariaveis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaVariaveis" ):
                return visitor.visitListaVariaveis(self)
            else:
                return visitor.visitChildren(self)




    def listaVariaveis(self):

        localctx = MOCPParser.ListaVariaveisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_listaVariaveis)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.variavel()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 122
                self.match(MOCPParser.VIRG)
                self.state = 123
                self.variavel()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(MOCPParser.IDENTIFICADOR, 0)

        def ASSIGN(self):
            return self.getToken(MOCPParser.ASSIGN, 0)

        def expressao(self):
            return self.getTypedRuleContext(MOCPParser.ExpressaoContext,0)


        def LBRACK(self):
            return self.getToken(MOCPParser.LBRACK, 0)

        def INT_LITERAL(self):
            return self.getToken(MOCPParser.INT_LITERAL, 0)

        def RBRACK(self):
            return self.getToken(MOCPParser.RBRACK, 0)

        def blocoArray(self):
            return self.getTypedRuleContext(MOCPParser.BlocoArrayContext,0)


        def chamadaLeitura(self):
            return self.getTypedRuleContext(MOCPParser.ChamadaLeituraContext,0)


        def getRuleIndex(self):
            return MOCPParser.RULE_variavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariavel" ):
                listener.enterVariavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariavel" ):
                listener.exitVariavel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariavel" ):
                return visitor.visitVariavel(self)
            else:
                return visitor.visitChildren(self)




    def variavel(self):

        localctx = MOCPParser.VariavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_variavel)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(MOCPParser.IDENTIFICADOR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.match(MOCPParser.IDENTIFICADOR)
                self.state = 131
                self.match(MOCPParser.ASSIGN)
                self.state = 132
                self.expressao(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.match(MOCPParser.IDENTIFICADOR)
                self.state = 134
                self.match(MOCPParser.LBRACK)
                self.state = 135
                self.match(MOCPParser.INT_LITERAL)
                self.state = 136
                self.match(MOCPParser.RBRACK)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 137
                self.match(MOCPParser.IDENTIFICADOR)
                self.state = 138
                self.match(MOCPParser.LBRACK)
                self.state = 139
                self.match(MOCPParser.RBRACK)
                self.state = 140
                self.match(MOCPParser.ASSIGN)
                self.state = 141
                self.blocoArray()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 142
                self.match(MOCPParser.IDENTIFICADOR)
                self.state = 143
                self.match(MOCPParser.LBRACK)
                self.state = 144
                self.match(MOCPParser.RBRACK)
                self.state = 145
                self.match(MOCPParser.ASSIGN)
                self.state = 146
                self.chamadaLeitura()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCHAVE(self):
            return self.getToken(MOCPParser.LCHAVE, 0)

        def RCHAVE(self):
            return self.getToken(MOCPParser.RCHAVE, 0)

        def listaValores(self):
            return self.getTypedRuleContext(MOCPParser.ListaValoresContext,0)


        def getRuleIndex(self):
            return MOCPParser.RULE_blocoArray

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlocoArray" ):
                listener.enterBlocoArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlocoArray" ):
                listener.exitBlocoArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlocoArray" ):
                return visitor.visitBlocoArray(self)
            else:
                return visitor.visitChildren(self)




    def blocoArray(self):
